--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:32.1.1-jre'
+    // 310-extra for mutable clock and others
+    implementation 'org.threeten:threeten-extra:1.7.2'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
